--- a/styles/styles.css
+++ b/styles/styles.css
@@ -368,7 +368,7 @@ span {
   margin: -17px auto 0;
   display: table;
   width: auto;
-  background-color: #02ccba;
+  background-color:  #004064;
   color: #fff;
   padding: 9px 35px;
   border-radius: 12px;
