MODIFICACION DE INDEX

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ header{
 	height: 100vh;/*es el 100 % de lo que ocupa la pantalla*/
 	/*background-image: linear-gradient(to top, rgb(161, 140, 209,0.5) 0%, rgb(251, 194, 235,0.5) 100%), url(../img/robot.jpg);*/
 	
-	background-image: linear-gradient(to top, rgba(223, 226, 25, 0.5) 0%, rgb(251, 194, 235,0.5) 100%), url(../images/fondo1.jpg);
+	background-image: linear-gradient(to top, rgba(223, 226, 25, 0.5) 0%, rgba(194, 209, 251, 0.5) 100%), url(../images/fondo1.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
@@ -246,16 +246,16 @@ span {
   margin: 0;
 }
 #Services .service-box .yellow {
-  background-color: #02b3e4;
+  background-color: #a5872c;
 }
 #Services .service-box .orange {
-  background-color: #02ccba;
+  background-color: #d1a82f;
 }
 #Services .service-box .red {
-  background-color: #02BED2;
+  background-color: #a5872c;
 }
 #Services .service-box .grey {
-  background-color: #47c6d0;
+  background-color: #d1a82f;
 }
 #Services .service-box:hover .service-icon {
   opacity: 0;
@@ -265,6 +265,7 @@ span {
   -o-transform: translateY(-110px) rotateX(90deg);
   transform: translateY(-110px) rotateX(90deg);
 }
+
 #Services .service-box:hover .service-content {
   opacity: 1;
   -webkit-transform: rotateX(0);
@@ -453,6 +454,12 @@ span {
 #Contact .block-heading {
   text-align: center;
   margin-bottom: 40px;
+}
+.block-heading h2{
+  color: #1a4ebe;
+}
+.nombre {
+  color: #0062cc;
 }
 #Contact .contact-wrapper {
   border-right: 1px solid #cecece;
